<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_save" />
    <item
        android:id="@+id/menu_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_crop"
        android:icon="@android:drawable/ic_menu_crop"
        app:showAsAction="never"
        android:title="@string/menu_crop" />

</menu>